Add visualization for comparing classical and quantum solver results in analysis notebook

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -152,7 +152,34 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Assuming you've saved the classical and quantum solutions somewhere, or run them in a cell.\n",
+    "# For example:\n",
+    "from classical_solver import solve_qubo_classically\n",
+    "from quantum_solver import solve_qubo\n",
+    "\n",
+    "# Using the same QUBO matrix from earlier\n",
+    "classical_solution, classical_obj = solve_qubo_classically(Q)\n",
+    "quantum_result = solve_qubo(Q, p=1)\n",
+    "\n",
+    "print(\"Classical Solver Result:\")\n",
+    "print(\"Solution:\", classical_solution)\n",
+    "print(\"Objective:\", classical_obj)\n",
+    "\n",
+    "print(\"\\nQuantum Solver Result:\")\n",
+    "print(quantum_result)\n",
+    "\n",
+    "# A simple bar chart to compare the selection of assets (binary vector)\n",
+    "assets = ['Asset ' + str(i) for i in range(len(classical_solution))]\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "plt.bar(assets, classical_solution, alpha=0.6, label='Classical')\n",
+    "plt.bar(assets, quantum_result.x, alpha=0.6, label='Quantum')\n",
+    "plt.xlabel(\"Assets\")\n",
+    "plt.ylabel(\"Selection (0 or 1)\")\n",
+    "plt.title(\"Asset Selection Comparison\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
